<resources>
    <string name="app_name">JuzOnce</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Services</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="inr">₹</string>
    <string name="home_second">Home Second</string>
    <!--DrawerLayout-->
    <string name="open_msg">open_msg</string>
    <string name="close_msg">close_msg</string>

    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="ok">OK</string>
    <string name="done">Done</string>
    <string name="enable_disable">Disable</string>
    <string name="enable">Enable</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="re_send">Resend</string>
    <string name="dismiss">Dismiss</string>
    <string name="grand">Grant</string>
    <string name="permission_required">Permission Required</string>
    <string name="submit">Submit</string>
    <string name="exit">Press again to exit</string>
    <string name="no_network_connection">No Network Connection</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="check_network_connection">Please Check Your Internet Connection and Try Again.</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="permission_camera">CAMERA</string>
    <string name="permission_storage">STORAGE</string>
    <string name="permission_location">LOCATION</string>
    <string name="permission_camera_description">Camera permission is required to capture your pictures and videos.</string>
    <string name="permission_storage_description">Storage permission is required for storage of video, images and access to images and videos from the selected folder.</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="old_passwrod">Old Passwrod</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="pending_status">Inprogress</string>
    <string name="processing_task">Working Task</string>
    <string name="completed_task">Completed Task</string>
    <string name="completed">Completed</string>
    <string name="products">Products</string>
    <string name="logout">Logout</string>
    <string name="booking">Booking</string>
    <string name="default_notification_channel_id">chennal_subscribe</string>

    <string-array name="district">
        <item>Select District</item>
    </string-array>
</resources>
