<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialogSnackView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="300dp"
    android:orientation="vertical">

    <include layout="@layout/dialog_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/iplOldPassword"
            style="@style/IPL"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtResetOldPassword"
                style="@style/EditTextRegisterPage"
                android:hint="@string/old_passwrod" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/iplNewPassword"
            style="@style/IPL"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtResetNewPassword"
                style="@style/EditTextRegisterPage"
                android:hint="@string/new_password" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/iplConfirmPassword"
            style="@style/IPL"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtResetConfirmPassword"
                style="@style/EditTextRegisterPage"
                android:hint="@string/confirm_password" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <include layout="@layout/submit_cancel_horizontal_view" />
</LinearLayout>