<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_splash">

    <fragment
        android:id="@+id/nav_splash"
        android:name="com.be.positive.ui.splash.SplashFragment"
        tools:layout="@layout/fragment_splash">

        <action
            android:id="@+id/action_check_login"
            app:destination="@id/nav_login"
            app:popUpTo="@id/nav_splash"
            app:popUpToInclusive="true" />

        <action
            android:id="@+id/action_check_dashboard"
            app:destination="@id/nav_home"
            app:popUpTo="@id/nav_splash"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_login"
        android:name="com.be.positive.ui.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_dashboard_after_login"
            app:destination="@id/nav_home"
            app:popUpTo="@+id/nav_login"
            app:popUpToInclusive="true" />

        <action
            android:id="@+id/action_register_from_login"
            app:destination="@id/nav_register"
            app:popUpTo="@+id/nav_login" />
    </fragment>

    <fragment
        android:id="@+id/nav_new_login"
        android:name="com.be.positive.NewLoginFragment"
        tools:layout="@layout/activity_new_login" />

    <fragment
        android:id="@+id/nav_register"
        android:name="com.be.positive.ui.register.RegisterFragment"
        android:label="@string/register"
        tools:layout="@layout/fragment_register">

        <action
            android:id="@+id/action_dashboard_after_login"
            app:destination="@id/nav_home"
            app:popUpTo="@+id/nav_register"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_home"
        android:name="com.be.positive.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_sub_category_from_product_list"
            app:destination="@id/nav_product_model"
            app:popUpTo="@+id/nav_home"
            app:popUpToInclusive="false" />

    </fragment>

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.be.positive.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_product_model"
        android:name="com.be.positive.ui.productModel.ProductModelFragment"
        android:label="@string/booking"
        tools:layout="@layout/fragment_product_model">

        <action
            android:id="@+id/action_nav_product_model_to_nav_product_view_and_book_service"
            app:destination="@id/nav_product_view_and_book_service" />
    </fragment>

    <fragment
        android:id="@+id/nav_product_view_and_book_service"
        android:name="com.be.positive.ui.productViewAndBookService.ProductViewAndBookServiceFragment"
        android:label="@string/booking"
        tools:layout="@layout/fragment_product_view_and_book_service" />

    <fragment
        android:id="@+id/nav_pending"
        android:name="com.be.positive.ui.pending.PendingFragment"
        android:label="Pending"
        tools:layout="@layout/fragment_pending" />

    <fragment
        android:id="@+id/nav_processing"
        android:name="com.be.positive.ui.processing.ProcessingFragment"
        android:label="Processing"
        tools:layout="@layout/fragment_processing" />

    <fragment
        android:id="@+id/nav_completed"
        android:name="com.be.positive.ui.completed.CompletedFragment"
        android:label="Completed"
        tools:layout="@layout/fragment_completed" />

    <dialog
        android:id="@+id/nav_logout"
        android:name="com.rcd.driver.ui.logout.DialogLogout"
        android:label="Logout"
        app:popUpTo="@layout/fragment_home"
        tools:layout="@layout/dialog_logout">

        <action
            android:id="@+id/action_check_home_not_login"
            app:destination="@id/nav_login"
            app:popUpToInclusive="false" />

    </dialog>

</navigation>